fix: Prevent jumping header on iOS panel transition

--- a/src/components/View/View.css
+++ b/src/components/View/View.css
@@ -83,6 +83,11 @@
 /**
  * Panel transition
  */
+
+.View--animated .View__panel {
+  transform: translateZ(0);
+}
+
 .View__panel--next ~ .View__panel--prev {
   animation: vkui-animation-view-prev-back .3s var(--android-easing);
 }
